--- a/RelacionesLineales.ipynb
+++ b/RelacionesLineales.ipynb
@@ -232,7 +232,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Con este ajsute podríamos predecir el número de casos a los 100 días"
+    "Con este ajuste podríamos predecir el número de casos a los 100 días"
    ]
   },
   {
