--- a/RelacionesLineales.ipynb
+++ b/RelacionesLineales.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En esta programa se ilustra cómo usando una lista de datos se puede obtener la expresión de una relación lineal que describa los datos. Primero se grafican verficar visualmente su comportamiento para luego obtener la ecuación empírica a partir de ajustes de regresión lineal. "
+    "Ejemplo para el curso de Gráficas y manejo de datos experimentales IER-UNAM. Elaboró J.A. del Río, licencia CC. En esta programa se ilustra cómo usando una lista de datos se puede obtener la expresión de una relación lineal que describa los datos. Primero se grafican verficar visualmente su comportamiento para luego obtener la ecuación empírica a partir de ajustes de regresión lineal. "
    ]
   },
   {
