--- a/RelacioneExponenciales.ipynb
+++ b/RelacioneExponenciales.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En esta programa se ilustra cómo usando una lista de datos se puede obtener una relación exponencial que describa datos experimentales u observacionales. Primero se grafican y se realiza una inspecciónen el formato gráfico para luego obtener la ecuación empírica a partir de ajustes de regresión lineal.   "
+    "Ejemplo para el curso de Gráficas y manejo de datos experimentales IER-UNAM. Elaboró J.A. del Río, licencia CC. En esta programa se ilustra cómo usando una lista de datos se puede obtener una relación exponencial que describa datos experimentales u observacionales. Primero se grafican y se realiza una inspecciónen el formato gráfico para luego obtener la ecuación empírica a partir de ajustes de regresión lineal.   "
    ]
   },
   {
