--- a/RelacionesPotenciales.ipynb
+++ b/RelacionesPotenciales.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En esta programa se ilustra cómo usando una lista de datos se puede obtener una relación de potencia a partir de datos experimentales. Primero se grafican para luego obtener la ecuación empírica a partir de ajustes de regresión lineal. Para ello se usa la transformación de datos mediante la función logaritmo."
+    "Ejemplo para el curso de Gráficas y manejo de datos experimentales IER-UNAM. Elaboró J.A. del Río, licencia CC. En esta programa se ilustra cómo usando una lista de datos se puede obtener una relación de potencia a partir de datos experimentales. Primero se grafican para luego obtener la ecuación empírica a partir de ajustes de regresión lineal. Para ello se usa la transformación de datos mediante la función logaritmo."
    ]
   },
   {
