--- a/RelacionesLineales2.ipynb
+++ b/RelacionesLineales2.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "RelacionesLineales1.ipynb",
+      "name": "RelacionesLineales2.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
@@ -323,6 +323,29 @@
           "name": "stdout",
           "text": [
             "en el dia 100 habria  479 casos\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('La calidad del ajuste se observa analizando el valor de R cuadrada. En este caso es',p2,'. Mientrás más cercano a 1 (-1) el ajuste es más adecuado') "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gIlKeQGcqhSk",
+        "outputId": "0269415c-c47d-4dc8-e9ec-8efbef3cd5a6"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La calidad del ajuste se observa analizando el valor de R cuadrada. En este caso es 0.9955967984197855 . Mientrás más cercano a 1 (-1) el ajuste es más adecuado\n"
           ]
         }
       ]
